--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
     <h1 id="welcomeMessage">You haven't connected the JavaScript yet</h1>
+    <h1> Dylan Test</h1>
 
     <p>Your tasks:
     <h2>JavaScript</h2>
