--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 
 <head>
     <title>JavaScript and Firebase refresher</title>
-    <script src="/__/firebase/8.10.1/firebase-database.js"></script>
-    <script src="/__/firebase/8.10.1/firebase-auth.js"></script>
-    <script src="/__/firebase/8.10.1/firebase-app.js"></script>
+
 </head>
 
 
@@ -55,6 +53,6 @@
             By the end of the week you will have Firebase going.</p>
     </div>
 </body>
-<script src="script.js"></script>
+<script type="module" src="script.js"></script>
 
 </html>
