trying to get auth working

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <input type="text" id="textInput" placeholder="Enter your text here">
     <button onclick="textInput()">Press Me!</button>
     <button onclick="fb_setup()">Setup Firebase</button>
+    <button onclick="fb_login()">Login with Google</button>
+    <p id="p_fbLogin">Username will show up when logged in</p>
 
     <div class="dropdown">
         <p>Your tasks:
