--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 id="welcomeMessage">You haven't connected the JavaScript yet</h1>
     <h1> Dylan Test</h1>
     <input type="text" id="textInput" placeholder="Enter your text here">
-    <button onclick="textInput()">Press Me!</button>
+    <button id="textInputBtn">Update Heading</button>
     <button onclick="fb_setup()">Setup Firebase</button>
     <button onclick="fb_login()">Login with Google</button>
     <p id="p_fbLogin">Username will show up when logged in</p>
