reads and changes title working on reading all nicely

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <button onclick="fb_login()">Login with Google</button>
     <p id="p_fbLogin">Username will show up when logged in</p>
     <p id="p_fbWriteRec">Your written records will show up here</p>
-    <button id="readBtn">Read Last Message</button>
+    <button id="readBtn">Set Title</button>
     <p id="p_fbReadRec">Last message will appear here</p>
+    <button id="readAllBtn">Read all messages</button> <p id="p_fbreadAll">Everyones messages will display here</p>
 
     <details>
         <summary>Your tasks (click to expand)</summary>
