everything finished except extension

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <button id="textInputBtn">Write to Firebase!</button>
     <button onclick="fb_login()">Login with Google</button>
     <p id="p_fbLogin">Username will show up when logged in</p>
-    <p id="p_fbWriteRec">Your written records will show up here</p>
+    <p id="p_fbWriteRec">What you wrote will be here</p>
     <button id="readBtn">Set Title</button>
-    <p id="p_fbReadRec">Last message will appear here</p>
+    <p id="p_fbReadRec">Read here</p>
     <button id="readAllBtn">Read all messages</button> <p id="p_fbreadAll">Everyones messages will display here</p>
 
     <details>
